--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tetris</title>
-    <link rel="icon" href="img/tetris.png" />
-    <script src="js/script.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
 
-  <body>
-    <h3>Score: <span id="score">0</span></h3>
-    <button id="start-btn">Start/Pause</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tetris</title>
+  <link rel="icon" href="img/tetris.png" />
+  <script src="js/script.js"></script>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
 
+<body>
+  <h3>Score: <span id="score">0</span></h3>
+  <button id="start-btn">Start/Pause</button>
+
+  <div class="container">
     <div class="grid"></div>
-  </body>
+    <div class="mini-grid"></div>
+  </div>
+
+</body>
+
 </html>
