--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
   <link rel="icon" href="img/tetris.png" />
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h3>Score: <span id="score">0</span></h3>
-  <button id="start-btn">Start/Pause</button>
-
   <div class="container">
     <div class="grid"></div>
-    <div class="mini-grid"></div>
+
+    <div class="side-panel">
+      <h3>Next piece</h3>
+      <div class="mini-grid"></div>
+      <h3>Score: <span id="score">0</span></h3>
+      <button id="start-btn">Start/Pause</button>
+    </div>
   </div>
 
 </body>
