--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tetris</title>
+    <link rel="icon" href="img/tetris.png" />
+    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tetris</title>
-  <link rel="icon" href="img/tetris.png" />
-  <script src="js/script.js"></script>
-  <link rel="stylesheet" href="css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-</head>
+  <body>
+    <div class="container">
+      <div class="grid"></div>
 
-<body>
-  <div class="container">
-    <div class="grid"></div>
-
-    <div class="side-panel">
-      <h3>Next piece</h3>
-      <div class="mini-grid"></div>
-      <h3>Score: <span id="score">0</span></h3>
-      <button id="start-btn">Start/Pause</button>
+      <div class="side-panel">
+        <h3>Next piece</h3>
+        <div class="mini-grid"></div>
+        <h3>Score: <span id="score">0</span></h3>
+        <button id="start-btn">Start/Pause</button>
+        <button id="restart-btn">Restart</button>
+      </div>
     </div>
-  </div>
-
-</body>
-
+  <div id="game-over" class="hidden">
+  <h1 id="gameOverText">Game Over</h1>
+  <button id="game-over-restart-btn">Restart</button>
+</div>
+    </div>
+  </body>
 </html>
